--- a/Myerp/Tpl/Caiwu/tongji_yingshou.html
+++ b/Myerp/Tpl/Caiwu/tongji_yingshou.html
@@ -6,7 +6,7 @@
 <script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/myerp/Chanpin/xianlu.js"></script>
 
 <div id="main">
-  <tp:includeCA file="Caiwu:left_fabu:'left_tongji','营收'" />
+  <tp:includeCA file="Caiwu:left_fabu:'left_fabu','营收'" />
   <div id="content" style="margin-left:170px;">
   
             <div id="resultdiv" class="resultdiv"></div>
