--- a/Myerp/Tpl/Chanpin/fabu.html
+++ b/Myerp/Tpl/Chanpin/fabu.html
@@ -54,7 +54,7 @@
               <input type="hidden" name="chufashengfen" id="chufashengfen"/>
               <input type="hidden" name="chufachengshi" id="chufachengshi"/></td>
             <td valign="top" scope="row" style="min-width:100px;"> 目的地: </td>
-            <td valign="top" style="min-width:350px;"><select name="guojing" id="guojing" class="button">
+            <td valign="top" style="min-width:350px;"><select class="button">
                 <option value="国内">国内</option>
               </select>
               <select name="daqu_id" id="pos1" onchange="change_pos('1')" class="button">
