--- a/Myerp/Tpl/Chanpin/index.html
+++ b/Myerp/Tpl/Chanpin/index.html
@@ -17,10 +17,7 @@
                 <tr>
                   <td nowrap="nowrap" class="paginationActionButtons"><a id="select_link" href="javascript:void(0)" onclick="showbox(this,'selectitem')">选择&nbsp;<img src="<{:__PUBLIC__}>/myerp/images/MoreDetail.png" ></a>&nbsp;
                     <input class="button" type="button" value=" 复制 ">
-                    <input class="button" type="button" value=" 发布 ">
                     <input class="button" type="button" value=" 删除 ">
-                    <input class="button" type="button" value=" 锁定 ">
-                    <input class="button" type="button" value=" 解锁 ">
                     <input class="button" type="button" value=" 截止 "></td>
                   <td nowrap="nowrap" align="right" class="paginationChangeButtons"><{$page}> </td>
                 </tr>
@@ -32,11 +29,11 @@
           <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:200px; width:30%"><div> 产品名称 </div></th>
           <th scope="col" nowrap="nowrap"><div> 出团日期 </div></th>
-          <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 发布人 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:40px;"><div> 发布人 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:120px;"><div> 单位 </div></th>
-          <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 分类 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 状态 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 锁定 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 分类 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:30px;"><div> 状态 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:40px;"><div> 锁定 </div></th>
           <th scope="col" nowrap="nowrap"><div> 创建时间 </div></th>
           <th scope="col" nowrap="nowrap"><div> 轨迹 </div></th>
         </tr>
@@ -50,10 +47,10 @@
         <td scope="row" align="left" valign="top"><a href="<{:SITE_INDEX}>Chanpin/fabu/chanpinID/<{$v['chanpinID']}>"><{$v['title']}></a></td>
         <td scope="row" align="center" valign="top"><img name="aa" onclick="showdate('<php>echo Fi_ConvertChars($v[chutuanriqi])</php>');showbox(this,'dateitem')" src="<{:__PUBLIC__}>/myerp/images/info_inline.gif" width="16" height="16" border="0" /></td>
         <td scope="row" align="left" valign="top"><{$v['user_name']}></td>
-        <td scope="row" align="left" valign="top" style="min-width:50px;"><{$v['bumen_copy']}></td>
-        <td scope="row" align="left" valign="top" style="min-width:50px;"><{$v['guojing']}>/<{$v['kind']}></td>
-        <td scope="row" align="left" valign="top" style="min-width:50px;"><{$v['status']}></td>
-        <td scope="row" align="left" valign="top" style="min-width:50px;"><{$v['islock']}></td>
+        <td scope="row" align="left" valign="top"><{$v['bumen_copy']}></td>
+        <td scope="row" align="left" valign="top"><{$v['guojing']}>/<{$v['kind']}></td>
+        <td scope="row" align="left" valign="top"><{$v['status']}></td>
+        <td scope="row" align="left" valign="top"><{$v['islock']}></td>
         <td scope="row" align="left" valign="top"><php>echo date('Y/m/d',$v['time']);</php></td>
         <td scope="row" align="center" valign="top"><img id="showshenhe" onclick="shenheshow_doit(<{$v['chanpinID']}>,this);" src="<{:__PUBLIC__}>/myerp/images/info_inline.gif" width="16" height="16" border="0" /></td>
       </tr>
