--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -253,7 +253,7 @@ function headsearch()
       <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/收支项">报表项审核</a> </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/报账单">报表审核</a> </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/订单">提成审核</a> </li>
-      <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/订单">团费审核</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Caiwu/zituanlist">团费确认（产品搜索）</a> </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/jixiao_tongji/type/员工">统计(绩效)</a> </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/yingshou_tongji">统计(营收)</a> </li>
     </ul>
