--- a/Myerp/Tpl/Xiaoshou/index.html
+++ b/Myerp/Tpl/Xiaoshou/index.html
@@ -110,7 +110,7 @@
                 <php>$i = 0;foreach($chanpin_list as $v){$i++;</php>
                 <tr height="40" class="evenListRowS1">
                   <td valign="top" align="left" scope="row"><{$i}></td>
-                  <td valign="top" align="center" style="min-width:300px;" scope="row"><strong><{$v['xianlu']['xianlu']['title']}></strong></td>
+                  <td valign="top" align="center" style="min-width:300px;" scope="row"><strong><{$v['xianlu_title']}></strong></td>
                   <td valign="top" align="left" scope="row"><{$v['adultprice']}>元</td>
                   <td valign="top" align="left" scope="row"><php>echo date('Y/m/d H:i',$v['xianlu']['xianlu']['time']);</php></td>
                   <td valign="top" align="left" style="min-width:50px;" scope="row"><{$v['xianlu']['xianlu']['bumentitle']}></td>
