--- a/Myerp/Tpl/Chanpin/zituandingdan.html
+++ b/Myerp/Tpl/Chanpin/zituandingdan.html
@@ -51,8 +51,8 @@
                 <tr height="20">
                   <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 编号 </div></th>
-                  <th scope="col" nowrap="nowrap"><div> 来源 </div></th>
-                  <th scope="col" nowrap="nowrap"><div> 联系人 </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:150px;"><div> 来源 </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 联系人 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 联系电话 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 成人数 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 儿童数 </div></th>
@@ -66,11 +66,11 @@
                 </tr>
                 
                 <php> $i = -1; foreach($dingdanlist as $v){ $i++;</php>
-                <tr style="cursor:pointer" height="30" class="evenListRowS1" onclick="showinfo(<{$v['chanpinID']}>)">
+                <tr height="30" class="evenListRowS1">
                   <td scope="row" align="left" valign="top"><{$i+1}></td>
-                  <td scope="row" align="left" valign="top" style=" color:#0B578F"><{$v['chanpinID']}></td>
-                  <td scope="row" align="left" valign="top" style="min-width:150px;"><{$v['bumen_copy']}>-<{$v['user_name']}></td>
-                  <td scope="row" align="left" valign="top" style="min-width:60px;"><{$v['lianxiren']}></td>
+                  <td scope="row" align="left" valign="top"><a target="_blank" href="<{:SITE_INDEX}>Xiaoshou/dingdanxinxi/showtype/1/chanpinID/<{$v['chanpinID']}>"><{$v['chanpinID']}></a></td>
+                  <td scope="row" align="left" valign="top"><{$v['bumen_copy']}>-<{$v['user_name']}></td>
+                  <td scope="row" align="left" valign="top"><{$v['lianxiren']}></td>
                   <td scope="row" align="left" valign="top"><{$v['telnum']}></td>
                   <td scope="row" align="left" valign="top"><{$v['chengrenshu']}></td>
                   <td scope="row" align="left" valign="top"><{$v['ertongshu']}></td>
@@ -96,10 +96,6 @@
 <tp:includeCA file="Index:footer" />
 
 <script language="javascript"> 
-
-function showinfo(chanpinID){
-	window.location = '<{:SITE_INDEX}>Xiaoshou/dingdanxinxi/showtype/1/chanpinID/'+chanpinID;
-}
 
 function dosearch()
 {
