--- a/Myerp/Tpl/Xiaoshou/dingdanxinxi.html
+++ b/Myerp/Tpl/Xiaoshou/dingdanxinxi.html
@@ -364,6 +364,7 @@ function getshenhemessage_after(data,status)
           <td align="left" style="height: 32px"> 证件号码： </td>
           <td align="left" style="height: 32px"> 应付： </td>
           <td align="left" style="height: 32px"> 备注： </td>
+          <td align="left" style="height: 32px"> 付款状态/付款确认 </td>
           <td align="left" style="height: 32px"> 详细资料： </td>
         </tr>
        <php>$i = 0; foreach($tuanyuan as $vo){$i++;</php>
@@ -397,6 +398,23 @@ function getshenhemessage_after(data,status)
           <td align="left" style="height: 32px"><input name="zhengjianhaoma<{$i}>" type="text" value="<{$vo['zhengjianhaoma']}>" check="^\S+$" warning="证件号码不能为空,且不能含有空格"></td>
           <td align="left" style="height: 32px"><input name="price<{$i}>" type="text" value="<{$vo['price']}>"></td>
           <td align="left" style="height: 32px"><input name="remark<{$i}>" type="text" value="<{$vo['remark']}>"></td>
+          <td align="left" style="height: 32px">
+          <strong><{$vo['ispay']}></strong>/
+          <select name="pay_method<{$i}>">
+          	<php>if($vo['pay_method']){</php>
+              <option style="width:50px;" value="<{$vo['pay_method']}>"><{$vo['pay_method']}></option>
+              <option disabled="disabled">--------</option>
+          	<php>}</php>
+              <option value="现金">现金</option>
+              <option value="网拨">网拨</option>
+              <option value="银行卡">银行卡</option>
+              <option value="汇款">汇款</option>
+              <option value="转账">转账</option>
+              <option value="支票">支票</option>
+              <option value="签单">签单</option>
+            </select>
+           <input type="hidden" name="ispay<{$i}>" id="ispay<{$vo[id]}>" value="<{$vo['ispay']}>" />
+          </td>
           <td align="left" style="height: 32px">
           <php>if($vo['id']){</php>
           <a href="javascript:TravelerDetail(<{$vo['id']}>)">查看</a>
