--- a/Myerp/Tpl/Xiaoshou/zituan.html
+++ b/Myerp/Tpl/Xiaoshou/zituan.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+<link rel="shortcut icon" type="image/x-icon" href="<{:__PUBLIC__}>/myerp/images/sugar_icon.ico" media="screen" />
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="txianlu_ext/html; charset=utf-8" />
 <title><{$xianlu['xianlu']['title']}></title>
-<link type="text/css" href="<{:__PUBLIC__}>/gulianstyle/admintemp/ks.css" rel="stylesheet" />
-<script src="<{:__PUBLIC__}>/gulianstyle/js/jquery.js" type="text/javascript"></script>
-<script src="<{:__PUBLIC__}>/gulianstyle/js/jquery.KinSlideshow-1.2.1.min.js" type="text/javascript"></script>
-<script src="<{:__PUBLIC__}>/gulianstyle/js/tanchukuang.js" type="text/javascript"></script>
-<script type="text/javascript">
+<link type="txianlu_ext/css" href="<{:__PUBLIC__}>/gulianstyle/admintemp/ks.css" rel="stylesheet" />
+<script src="<{:__PUBLIC__}>/gulianstyle/js/jquery.js" type="txianlu_ext/javascript"></script>
+<script src="<{:__PUBLIC__}>/gulianstyle/js/jquery.KinSlideshow-1.2.1.min.js" type="txianlu_ext/javascript"></script>
+<script src="<{:__PUBLIC__}>/gulianstyle/js/tanchukuang.js" type="txianlu_ext/javascript"></script>
+<script type="txianlu_ext/javascript">
 $(function(){
 	$("#KinSlideshow").KinSlideshow();
 })
@@ -113,7 +114,6 @@ $(function(){
     <a href="#fybh">费用包含</a><a href="#fybbh">费用不包含</a><a href="#qzxx">签证信息</a><a href="#kxzf">可选自费</a><a href="#gwxx">购物信息</a><a href="#ydtk">预定条款</a><a href="#cxjs">出行警示</a> 
   <php>}</php>
   </div>
-  <php>if($xianlu['xianlu']['xianlutype'] != '自由人'){</php>
   <div class="ks_main"><!--主体内容--> 
   <a name="xyxc"></a>
     <del>旅游行程</del>
@@ -129,48 +129,47 @@ $(function(){
       <php>}</php>
     </div>
   </div>
-  <php>}</php>
   <a name="ctxz"></a>
   <div class="ks_main" ><!--主体内容--> 
     <del>参团须知</del>
     <div class="ks_main_1st"> <{$xianlu['xianlu']['cantuanxuzhi']}> </div>
   </div>
   
-  <php>if($xianlu['guojing'] == '境外'){</php>
+  <php>if($xianlu['xianlu']['guojing'] == '境外'){</php>
   <a name="fybh"></a>
   <div class="ks_main"><!--主体内容--> 
     <del>费用包含</del>
-    <div class="ks_main_1st"> <{$xianlu['ext']['feiyongyes']}> </div>
+    <div class="ks_main_1st"> <{$xianlu['xianlu_ext']['feiyongyes']}> </div>
   </div>
   <a name="fybbh"></a>
   <div class="ks_main"><!--主体内容--> 
     <del>费用不包含</del>
-    <div class="ks_main_1st"> <{$xianlu['ext']['feiyongno']}> </div>
+    <div class="ks_main_1st"> <{$xianlu['xianlu_ext']['feiyongno']}> </div>
   </div>
   <a name="qzxx"></a>
   <div class="ks_main"><!--主体内容--> 
     <del>签证信息</del>
-    <div class="ks_main_1st"> <{$xianlu['ext']['qianzhengxinxi']}> </div>
+    <div class="ks_main_1st"> <{$xianlu['xianlu_ext']['qianzhengxinxi']}> </div>
   </div>
   <a name="kxzf"></a>
   <div class="ks_main"><!--主体内容--> 
     <del>可选自费</del>
-    <div class="ks_main_1st"> <{$xianlu['ext']['kexuanzifei']}> </div>
+    <div class="ks_main_1st"> <{$xianlu['xianlu_ext']['kexuanzifei']}> </div>
   </div>
   <a name="gwxx"></a>
   <div class="ks_main"><!--主体内容--> 
     <del>购物信息</del>
-    <div class="ks_main_1st"> <{$xianlu['ext']['gouwuxinxi']}> </div>
+    <div class="ks_main_1st"> <{$xianlu['xianlu_ext']['gouwuxinxi']}> </div>
   </div>
   <a name="ydtk"></a>
   <div class="ks_main"><!--主体内容--> 
     <del>预定条款</del>
-    <div class="ks_main_1st"> <{$xianlu['ext']['yudingtiaokuan']}> </div>
+    <div class="ks_main_1st"> <{$xianlu['xianlu_ext']['yudingtiaokuan']}> </div>
   </div>
   <a name="cxjs"></a>
   <div class="ks_main"><!--主体内容--> 
     <del>出行警示</del>
-    <div class="ks_main_1st"> <{$xianlu['ext']['chuxingjingshi']}> </div>
+    <div class="ks_main_1st"> <{$xianlu['xianlu_ext']['chuxingjingshi']}> </div>
   </div>
   <php>}</php>
   
