--- a/Myerp/Tpl/Chanpin/customer.html
+++ b/Myerp/Tpl/Chanpin/customer.html
@@ -20,6 +20,7 @@
                       <tbody>
                         <tr>
                           <td nowrap="nowrap" class="paginationActionButtons">
+                        <input class="button" type="button" value=" 导出 ">
                           </td>
                           <td nowrap="nowrap" align="right" class="paginationChangeButtons">
                           	<{$page}>
