--- a/Myerp/Tpl/Message/gonggao.html
+++ b/Myerp/Tpl/Message/gonggao.html
@@ -47,7 +47,7 @@
                 <tr height="40" class="evenListRowS1">
                   <td scope="row" align="left" valign="top"><{$i+1}></td>
                   <td scope="row" align="left" valign="top"><a href="javascript:opendialog_2('<{$v[messageID]}>')"><{$v['title']}></a></td>
-                  <td scope="row" align="center" valign="top"><php>echo date('m/d H:i',$v['time'])</php></td>
+                  <td scope="row" align="center" valign="top"><php>echo date('Y/m/d H:i',$v['time'])</php></td>
                   <td scope="row" align="center" valign="top">
                         <input class="button" type="button" value=" 删除 " onclick="infodelete('<{$v[messageID]}>')">
                         <input class="button" type="button" value=" 编辑 " onclick="infoedit('<{$v[messageID]}>')">
