--- a/Myerp/Tpl/Chanpin/zituandingdan.html
+++ b/Myerp/Tpl/Chanpin/zituandingdan.html
@@ -103,4 +103,10 @@ function dosearch()
 		window.location = '<{:SITE_INDEX}>Chanpin/index/title/'+title;
 }
 
+function baoming(chanpinID){
+	window.open('<{:SITE_INDEX}>Chanpin/zituanbaoming/chanpinID/'+chanpinID);
+}
+
+
+
 </script>
