--- a/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
@@ -49,7 +49,7 @@
         <td width="25%">&nbsp;团号：<{$zituan['tuanhao']}></td>
         <td width="20%">&nbsp;接团单位：<{$baozhang['datatext']['jietuandanwei']}></td>
         <td width="20%">&nbsp;部门：<{$zituan['bumen_copy']}></td>
-        <td width="10%">&nbsp;天数：<{$zituan['tianshu']}></td>
+        <td width="10%">&nbsp;天数：<{$zituan['xianlulist']['tianshu']}></td>
         <td width="10%">&nbsp;人数：<{$zituan['renshu']}></td>
       </tr>
       <tr height="28px" >
