--- a/Myerp/Tpl/Index/simple_header.html
+++ b/Myerp/Tpl/Index/simple_header.html
@@ -29,6 +29,16 @@
 <script>
 var timer;
 ThinkAjax.updateTip = '<IMG SRC="<{:__PUBLIC__}>/myerp/images/loading2.gif" WIDTH="16" HEIGHT="16" BORDER="0" ALT="loading..." align="absmiddle"> 数据处理中...';
+
+function ajaxalert(title){
+	document.getElementById('resultdiv_2').innerHTML	=	'<div style="color:red">'+title+'</div>';
+	jQuery("#resultdiv_2").show("fast"); 
+	this.intval = window.setTimeout(function (){
+		document.getElementById('resultdiv_2').style.display='none';
+		document.getElementById('resultdiv_2').innerHTML='';
+		},3000);
+}
+
 </script>
 
 </head>
