--- a/Myerp/Tpl/Xiaoshou/dingdanxinxi - 副本.html
+++ b/Myerp/Tpl/Xiaoshou/dingdanxinxi - 副本.html
@@ -1,5 +1,6 @@
+
 <tp:includeCA file="Index:showheader" />
-<script type='text/javascript' src='<{:__PUBLIC__}>/myerp/Xiaoshou/dingdanxinxi.js'></script>
+<script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/myerp/Chanpin/xianlu.js"></script>
 <style>
 .tb1 {
 	border-left:1px dashed #CCCCCC;
@@ -27,14 +28,102 @@
 <script type='text/javascript' src='<{:__PUBLIC__}>/myerp/jquery-autocomplete/jquery.autocomplete.js'></script>
 <link rel="stylesheet" type="text/css" href="<{:__PUBLIC__}>/myerp/jquery-autocomplete/jquery.autocomplete.css" />
 <script>
-var chanpinID = '<{$chanpinID}>';
-var title =  '编号<{$chanpinID}>订单';
+
+function save(){
+	scroll(0,0);
+	ThinkAjax.sendForm('form1','<{:SITE_INDEX}>Xiaoshou/dopostdingdanxinxi/',doComplete,'resultdiv');
+}
+function doComplete(data,status){
+	if(status == 1)
+	location.reload();
+}
+		 
 var user = [
 	 <php>foreach($userlist as $v){</php>
 		  { title: "<{$v[title]}>", systemID: "<{$v['systemID']}>" },
 	 <php>}</php>
  ];
 
+jQuery().ready(function() {
+	  myautocomplete("#owner",'用户');
+});
+		
+ function myautocomplete(target,parenttype)
+{
+		if(parenttype == '用户')
+		datas = user;
+		jQuery(target).unautocomplete().autocomplete(datas, {
+		   max: 50,    //列表里的条目数
+		   minChars: 0,    //自动完成激活之前填入的最小字符
+		   width: 150,     //提示的宽度，溢出隐藏
+		   scroll:false,
+		   matchContains: true,    //包含匹配，就是data参数里的数据，是否只要包含文本框里的数据就显示
+		   autoFill: true,    //自动填充
+		   formatItem: function(data, i, num) {//多选显示
+			   return data.title;
+		   },
+		   formatMatch: function(data, i, num) {//匹配格式
+			   return data.title;
+		   },
+		   formatResult: function(data) {//选定显示
+			   return data.title;
+		   }
+		})
+}
+
+function checktable()
+{
+	if(CheckForm('form2','resultdiv_2'))
+	{
+		if(checktitle())
+		{
+			var state=document.getElementById("status");
+			if(state.value=="占位")
+				alert("订单为占位状态，请在48小时内转为确认，否则系统会自动取消该订单！");
+			ThinkAjax.sendForm('form2','<{:SITE_INDEX}>Xiaoshou/dopostdingdanxinxi/',doComplete,'resultdiv');
+		}
+		else
+			alert("收客人填写错误");
+		
+	}
+	return false;
+}
+
+
+function checktitle(){
+	datas = user;
+	var title = jQuery("#owner").val();
+	var ishas = 0;
+	for (var i=0;i<datas.length;i++) { 
+		if(title == datas[i]['title']){
+			ishas = 1;
+			break;
+		}
+	} 
+	if(!ishas){
+		return false;
+	}
+	else{
+		return true;
+	}
+}
+    var SITE_INDEX = '<{:SITE_INDEX}>';
+    var chanpinID = '<{$chanpinID}>';
+	var title =  '编号<{$chanpinID}>订单';
+	function doshenhe(dotype){
+		ThinkAjax.myloading('resultdiv');
+		var dataID = chanpinID;
+		var datatype = '订单';
+		jQuery.ajax({
+			type:	"POST",
+			url:	SITE_INDEX+"Chanpin/doshenhe",
+			data:	"dataID="+dataID+"&dotype="+dotype+"&datatype="+datatype+"&title="+title,
+			success:function(msg){
+				ThinkAjax.myAjaxResponse(msg,'resultdiv');
+			}
+		});
+	}
+	
  function quxiao(id)
  {
 	jQuery.ajax({
@@ -53,9 +142,58 @@ function quxiao_after(data,status){
 		window.location = SITE_INDEX+'Xiaoshou/dingdanlist';
 	}
 }
-function querendingdan(id){
-	jQuery("#status").val('确认');
-	ThinkAjax.sendForm('form2',SITE_INDEX+'Xiaoshou/dopostdingdanxinxi/',doComplete,'resultdiv');
+ 
+ 
+function TravelerDetail(id)
+{
+	if(id == ''){
+	ajaxalert("请填写团员基本信息，并保存后刷新后重试！！");
+	return ;
+	}
+	save();
+    var url=SITE_INDEX+"Xiaoshou/tuanyuanxinxi/id/"+id;
+    window.open(url,'newwin','width=900,height=700,left=240,status=no,resizable=yes,scrollbars=yes');
+}
+
+function shenhe_back(dataID,datatype){
+	ThinkAjax.myloading('resultdiv');
+	jQuery.ajax({
+		type:	"POST",
+		url:	"<{:SITE_INDEX}>Chanpin/shenheback",
+		data:	"dataID="+dataID+"&datatype="+datatype,
+		success:function(msg){
+			scroll(0,0);
+			ThinkAjax.myAjaxResponse(msg,'resultdiv');
+		}
+	});
+}
+
+function shenheshow_doit(chanpinID,obj){
+   if(jQuery("#shenhediv").is(":visible")==true){ 
+	  jQuery('#shenhediv').hide();
+	  return ;
+   }
+    getshenhemessage("index.php?s=/Message/getshenhemessage/chanpinID/"+chanpinID);
+	objleft = getPosLeft(obj) - 370;
+	objtop = getPosTop(obj) + 20;
+	jQuery('#shenhediv').css({top:objtop , left:objleft });
+	jQuery('#shenhediv').show();
+}
+function getshenhemessage(posturl){
+	jQuery.ajax({
+		type:	"POST",
+		url:	"<{:ET_URL}>"+posturl,
+		data:	"",
+		success:	function(msg){
+				ThinkAjax.myAjaxResponse(msg,'',getshenhemessage_after);
+		}
+	});
+}
+function getshenhemessage_after(data,status)
+{
+	if(status == 1){
+		jQuery("#shenhe_box").html(data);
+	}
 }
 </script>
 
@@ -95,7 +233,6 @@ function querendingdan(id){
 	  <php>}</php>
           
           <input type="button" value=" 取消订单 " name="button" class="button primary" onClick="quxiao('<{$chanpinID}>');">
-          <input type="button" value=" 确认订单 " name="button" class="button primary" onClick="querendingdan();">
       </div>
       
   <form name="form2" method="post" action="<{:SITE_INDEX}>Xiaoshou/dopostdingdanxinxi" id="form2" >
@@ -119,7 +256,7 @@ function querendingdan(id){
           <td align="left" style="height: 32px; min-width:80px; width:20%"><{$dingdan['fuzeren']}></td>
         </tr>
         <tr>
-          <td align="left" style="height: 32px;">收客人及部门（提成）：</td>
+          <td align="left" style="height: 32px;">收客人及部门：</td>
           <td align="left" style="height: 32px">
             <input type="text" name="owner" id="owner" style="width:50px;" value="<{$dingdan['owner']}>" check="^\S+$" warning="所有人员姓名不能为空,且不能含有空格">
               <select name="departmentID">
@@ -162,8 +299,16 @@ function querendingdan(id){
           </td>
           <td align="left" style="height: 32px"> 订单状态：</td>
           <td align="left" style="height: 32px">
-			<input type="hidden" name="status" id="status" value="<{$dingdan['status']}>" />
-			<{$dingdan['status']}>
+            <select name="status" id="status">
+            	<php>if($dingdan['status']){</php>
+                <option value="<{$dingdan['status']}>"><{$dingdan['status']}></option>
+                <option disabled="disabled">---------------</option>
+            	<php>}</php>
+                <option value="占位">占位</option>
+                <option value="确认">确认</option>
+                <option value="候补">候补</option>
+			</select>
+            <input style="width:60px;" class="button" type="button" value=" 修改 " onClick="checktable()">
           </td>
         </tr>
         <tr>
@@ -268,8 +413,7 @@ function querendingdan(id){
               <option value="支票">支票</option>
               <option value="签单">签单</option>
             </select>
-           <input type="hidden" name="ispay<{$i}>" id="ispay<{$vo[id]}>" <php>if(!$vo['ispay']){</php> value="未付款" <php>}</php> value="<{$vo['ispay']}>"/>
-            <input style="width:60px;" class="button" type="button" value=" 确认 " onclick="dofukuan(<{$vo[id]}>)">
+           <input type="hidden" name="ispay<{$i}>" id="ispay<{$vo[id]}>" value="<{$vo['ispay']}>" />
           </td>
           <td align="left" style="height: 32px">
           <php>if($vo['id']){</php>
